--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -57,6 +60,7 @@ dependencies {
 
     //Required Dependencies
 
+    def core_version = "1.2.0"
     implementation 'com.firebaseui:firebase-ui-database:2.4.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
@@ -68,4 +72,5 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.kaopiz:kprogresshud:1.2.0'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+    implementation "androidx.core:core-ktx:$core_version"
 }
