--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,6 @@ dependencies {
     implementation 'com.kaopiz:kprogresshud:1.2.0'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
     implementation "androidx.core:core-ktx:$core_version"
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'co.metalab.asyncawait:asyncawait:1.0.0'
 }
